force-app/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF (FLOOR((NOW()-Latest_Owner_DateTime__c)) &gt; 0, TEXT(FLOOR((NOW()-Latest_Owner_DateTime__c)) ) &amp; &quot; Days &quot;, &quot;&quot;) 

&amp;
IF(FLOOR(MOD((NOW()-Latest_Owner_DateTime__c)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((NOW()-Latest_Owner_DateTime__c)* 24, 24 ))) &amp; &quot; Hours &quot;,&quot;&quot;) 
 &amp; 
TEXT(ROUND(MOD((NOW()-Latest_Owner_DateTime__c)* 24 * 60, 60 ), 0)) &amp; &quot; Minutes &quot;
 &amp; 
TEXT(ROUND(MOD((NOW()-Latest_Owner_DateTime__c)* 24 * 60*60, 60 ), 0)) &amp; &quot; Seconds&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>