force-app/main/default/objects/Case/fields/ByPass_Automation__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Automation</label>
    <type>Checkbox</type>
</CustomField>