force-app/main/default/objects/Case/fields/Case_Opened_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Opened_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Case ReOpened Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>