force-app/main/default/objects/Case/fields/Case_Source__c.field-meta.xml
<CustomField>
    <fullName>Case_Source__c</fullName>
    <description>Different sources record Generation - to be used in Lead (Lead Source - standard field) and Cases (Case_Source__c Custom Field)</description>
    <label>Case Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sources</valueSetName>
    </valueSet>
</CustomField>