force-app/main/default/objects/Case/fields/Comment_History__c.field-meta.xml
<CustomField>
    <fullName>Comment_History__c</fullName>
    <label>Internal Comment History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>