force-app/main/default/objects/Case/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <label>Cust ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>