force-app/main/default/objects/Case/fields/Customer_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mobile_No__c</fullName>
    <inlineHelpText>Registered Mobile Number of customers</inlineHelpText>
    <label>Customer Mobile No.</label>
    <type>Phone</type>
</CustomField>