force-app/main/default/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <inlineHelpText>Capture the customer name</inlineHelpText>
    <label>Customer Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>