force-app/main/default/objects/Case/fields/Customer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Customer_PAN__c</fullName>
    <inlineHelpText>Customer verified PAN</inlineHelpText>
    <label>Customer PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>