force-app/main/default/objects/Case/fields/Email_Conversation_History__c.field-meta.xml
<CustomField>
    <fullName>Email_Conversation_History__c</fullName>
    <label>Email Conversation History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>