force-app/main/default/objects/Case/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account Number</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No Financial Account found assocaite with the selected Customer Account</errorMessage>
        <filterItems>
            <field>Financial_Account__c.Account_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>