force-app/main/default/objects/Case/fields/Financial_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Number__c</fullName>
    <inlineHelpText>To capture the Loan Account Number</inlineHelpText>
    <label>Financial Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>