force-app/main/default/objects/Case/fields/First_Individual_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Individual_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Individual Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>