force-app/main/default/objects/Case/fields/First_Individual_Owner_DateTime__c.field-meta.xml
<CustomField>
    <fullName>First_Individual_Owner_DateTime__c</fullName>
    <label>First Individual Owner DateTime</label>
    <type>DateTime</type>
</CustomField>