force-app/main/default/objects/Case/fields/FTR_Closed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FTR_Closed_Date_Time__c</fullName>
    <label>FTR Closed Date/Time</label>
    <type>DateTime</type>
</CustomField>