force-app/main/default/objects/Case/fields/Last_Queue_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Queue_DateTime__c</fullName>
    <label>Last Queue DateTime</label>
    <type>DateTime</type>
</CustomField>