force-app/main/default/objects/Case/fields/Last_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Queue_Name__c</fullName>
    <label>Last Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>