force-app/main/default/objects/Case/fields/Last_ReOpened_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_ReOpened_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last ReOpened DateTime</label>
    <type>DateTime</type>
</CustomField>