force-app/main/default/objects/Case/fields/Latest_Owner_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_Owner_DateTime__c</fullName>
    <label>Latest Owner DateTime</label>
    <type>DateTime</type>
</CustomField>