force-app/main/default/objects/Case/fields/NewCaseMailDelivered__c.field-meta.xml
<CustomField>
    <fullName>NewCaseMailDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewCaseMailDelivered</label>
    <type>Checkbox</type>
</CustomField>