force-app/main/default/objects/Case/fields/No_of_Incoming_Emails__c.field-meta.xml
<CustomField>
    <fullName>No_of_Incoming_Emails__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Incoming Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>