force-app/main/default/objects/Case/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Name</valueSetName>
    </valueSet>
</CustomField>