force-app/main/default/objects/Case/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>To define the case process base on the case attributes</description>
    <label>Case Attribute</label>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>