force-app/main/default/objects/Case/fields/Query_Complaint_Detail__c.field-meta.xml
<CustomField>
    <fullName>Query_Complaint_Detail__c</fullName>
    <label>Query/Complaint Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>