force-app/main/default/objects/Case/fields/Resolution_Commnets__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Commnets__c</fullName>
    <label>Resolution Commnets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>