force-app/main/default/objects/Case/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Sub_Status</valueSetName>
    </valueSet>
</CustomField>