force-app/main/default/objects/Case/recordTypes/Admin.recordType-meta.xml
<RecordType>
    <fullName>Admin</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Admin</label>
</RecordType>