force-app/main/default/objects/Case/recordTypes/Customer_Service_Investment.recordType-meta.xml
<RecordType>
    <fullName>Customer_Service_Investment</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Customer Service Investment</label>
</RecordType>