force-app/main/default/objects/Case/recordTypes/Welcom_Calling_Details_Altifi.recordType-meta.xml
<RecordType>
    <fullName>Welcom_Calling_Details_Altifi</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Welcom Calling Details - Altifi</label>
</RecordType>