force-app/main/default/objects/Case/recordTypes/Welcom_Calling_Details_Do.recordType-meta.xml
<RecordType>
    <fullName>Welcom_Calling_Details_Do</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Welcom Calling Details - DO</label>
</RecordType>