force-app/main/default/objects/Case/recordTypes/Welcom_Calling_Details_El.recordType-meta.xml
<RecordType>
    <fullName>Welcom_Calling_Details_El</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Welcom Calling Details - EL</label>
</RecordType>