force-app/main/default/objects/Case/recordTypes/Welcom_Calling_Details_LAP.recordType-meta.xml
<RecordType>
    <fullName>Welcom_Calling_Details_LAP</fullName>
    <active>true</active>
    <businessProcess>Case Process</businessProcess>
    <label>Welcom Calling Details - LAP</label>
</RecordType>