force-app/main/default/objects/Case/validationRules/No_Edit_Allow_for_Queue_Owner_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_Allow_for_Queue_Owner_Record</fullName>
    <active>false</active>
    <errorConditionFormula>and
    (
        not(isnew()), 
        not(or(CONTAINS(  $Label.Case_Profile_Name_Allowe_Edit_For_Queue_Owner_Records,$Profile.Name),$Profile.Name = null)),
        Owner:Queue.Id != null

    )</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Please Accept the case first</errorMessage>
</ValidationRule>