force-app/main/default/objects/Case/validationRules/Resolution_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Comment</fullName>
    <active>false</active>
    <description>Resolution Comment mandatory for closed cases</description>
    <errorConditionFormula>AND( ISCHANGED(Status), Resolution_Commnets__c == null, text(Status) ==&apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>Resolution Comment mandatory for closed cases</errorMessage>
</ValidationRule>