force-app/main/default/objects/Case/validationRules/Status_Duplicate_ParentID_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Duplicate_ParentID_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>and (text( Status ) = &apos;Duplicate&apos; ,  ISBLANK( ParentId ) )</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Parent Case is mandatory</errorMessage>
</ValidationRule>