force-app/main/default/objects/Case/listViews/Accounts_DO_Case.listView-meta.xml
<ListView>
    <fullName>Accounts_DO_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Accounts - DO</label>
    <queue>Accounts_DO</queue>
    <sharedTo>
        <group>Accounts_DO</group>
    </sharedTo>
</ListView>