force-app/main/default/objects/Case/listViews/Call_Back_Case.listView-meta.xml
<ListView>
    <fullName>Call_Back_Case</fullName>
    <booleanFilter>1 and 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Customer_Mobile_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Sub_Category__c</field>
        <operation>equals</operation>
        <value>Call Back</value>
    </filters>
    <label>Call Back</label>
    <sharedTo>
        <group>Call_Back</group>
    </sharedTo>
</ListView>