force-app/main/default/objects/Case/listViews/Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Customer Service</label>
    <queue>Customer_Service</queue>
    <sharedTo>
        <group>Customer_Service</group>
        <group>EmailToCase</group>
        <group>NodalGRORBI</group>
    </sharedTo>
</ListView>