force-app/main/default/objects/Case/listViews/Customer_Service_Investment_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Investment_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Customer Service Investment</label>
    <queue>Customer_Service_Investment</queue>
    <sharedTo>
        <group>Customer_Service_Investment</group>
    </sharedTo>
</ListView>