force-app/main/default/objects/Case/listViews/CXO_Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>CXO_Customer_Service_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>CXO  - Customer Service</label>
    <queue>CXO_Customer_Service</queue>
    <sharedTo>
        <group>CXO_Customer_Service</group>
    </sharedTo>
</ListView>