force-app/main/default/objects/Case/listViews/DO_Operations_Case.listView-meta.xml
<ListView>
    <fullName>DO_Operations_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Operations - DO</label>
    <queue>Operations_DO</queue>
    <sharedTo>
        <group>Operations_DO</group>
    </sharedTo>
</ListView>