force-app/main/default/objects/Case/listViews/EL_Operations_Case.listView-meta.xml
<ListView>
    <fullName>EL_Operations_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Operations - EL</label>
    <queue>Operations_EL</queue>
    <sharedTo>
        <group>Operations_EL</group>
    </sharedTo>
</ListView>