force-app/main/default/objects/Case/listViews/EL_Sales_Queue_Case.listView-meta.xml
<ListView>
    <fullName>EL_Sales_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Sales - EL</label>
    <queue>Sales_EL</queue>
    <sharedTo>
        <group>Sales_EL</group>
    </sharedTo>
</ListView>