force-app/main/default/objects/Case/listViews/EmailToCase_Case.listView-meta.xml
<ListView>
    <fullName>EmailToCase_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>EmailToCase</label>
    <queue>EmailToCase</queue>
    <sharedTo>
        <group>EmailToCase</group>
    </sharedTo>
</ListView>