force-app/main/default/objects/Case/listViews/IO_Internal_Ombudsman_Case.listView-meta.xml
<ListView>
    <fullName>IO_Internal_Ombudsman_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>IO - Internal Ombudsman</label>
    <queue>IO_Internal_Ombudsman</queue>
    <sharedTo>
        <group>IO_Internal_Ombudsman</group>
    </sharedTo>
</ListView>