force-app/main/default/objects/Case/listViews/LAP_Operations_Case.listView-meta.xml
<ListView>
    <fullName>LAP_Operations_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Operations - LAP</label>
    <queue>Operations_LAP</queue>
    <sharedTo>
        <group>Operations_LAP</group>
    </sharedTo>
</ListView>