force-app/main/default/objects/Case/listViews/NodalGRORBI_Case.listView-meta.xml
<ListView>
    <fullName>NodalGRORBI_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>NodalGRORBI</label>
    <queue>NodalGRORBI</queue>
    <sharedTo>
        <group>NodalGRORBI</group>
    </sharedTo>
</ListView>