force-app/main/default/objects/Case/listViews/Open_Cases.listView-meta.xml
<ListView>
    <fullName>Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Cases</label>
    <sharedTo>
        <group>Customer_Service</group>
    </sharedTo>
</ListView>