force-app/main/default/objects/Case/listViews/Operations_DO_Bureau_Case.listView-meta.xml
<ListView>
    <fullName>Operations_DO_Bureau_Case</fullName>
    <booleanFilter>1 or 2 or 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Vinod Boro</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Operations - DO Bureau</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Rabia Sawdha</value>
    </filters>
    <label>Operations - DO Bureau</label>
    <sharedTo>
        <group>Operations_DO_Bureau</group>
    </sharedTo>
</ListView>